# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-ci.yaml
brain_games/: __init__.py
brain_games/scripts/: __init__.py  brain_even.py  brain_games.py  cli.py
workflows/: github-ci.yaml
