[tool.poetry]
name = "hexlet_code"
version = "0.1.1"
description = ""
authors = ["Artemiy Surov <asurov@iponweb.net>"]
packages =[{ include = "brain_games"},]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
